...
                        .frame(height: 150) // Height for animation layer
                    Spacer()
                }

                VStack(spacing: 40) {
                    // Welcome Title
                    Text("Welcome to Cleo's App")
                        .font(.largeTitle)
                        .bold()
                        .foregroundColor(.white)
                        .shadow(radius: 5)

                    Spacer()
...
